--- a/src/main/resources/llll.html
+++ b/src/main/resources/llll.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="textHttpLogin/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="textRun/html; charset=UTF-8">
 </head>
 <body>
-<script type="textHttpLogin/javascript">
+<script type="textRun/javascript">
 
     var url = encodeURI('https:\/\/passport.baidu.com\/v2Jump.html?callback=&index=0&codestring=&username=&phonenumber=&mail=&tpl=&u=&needToModifyPassword=&gotourl=&auth=&error=100023&traceid=');
     //parent.callback(url)
